--- a/package.json
+++ b/package.json
@@ -5,6 +5,16 @@
   "author": "Tobias Leinss <caruso33@web.de>",
   "license": "MIT",
   "scripts": {
-    "start": "node src/index.js"
+    "start": "ts-node src/index.ts"
+  },
+  "dependencies": {
+    "axios": "^0.27.2",
+    "dotenv": "^16.0.2",
+    "ts-node": "^10.9.1"
+  },
+  "devDependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/node": "^18.7.14",
+    "typescript": "^4.8.2"
   }
 }
